--- a/src/main.css
+++ b/src/main.css
@@ -1,4 +1,12 @@
 body * {
   outline: 1px solid lightgrey;
 }
+
+.top {
+  border: 2px solid red;
+}
+
+.bottom {
+  border: 2px solid blue;
+}
 /*# sourceMappingURL=main.css.map */
