--- a/src/main.scss
+++ b/src/main.scss
@@ -2,7 +2,7 @@ body * {
   outline: 1px solid lightgrey;
 }
 
-header{
+header, .wrapper_column{
   display: flex;
  justify-content: space-between;
 }
@@ -13,37 +13,46 @@ header{
 
 }
 
+
 .wrapper_logo{
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
     width: 300px;
     height: 120px;
-    padding-bottom: 10px;
+    
+
+}
+.logo_text{
+height: inherit;
+}
+
+.wrapper_logo img{
+  margin: 10px;
 }
 
 .logo_text, .banner p{
   text-align: center;
   font-family: 'Bebas Neue';
   font-weight: bold;
-
   
 }
 
 .logo_text  p{
   font-size: 34px;
-  text-transform: uppercase;
   color: #6e6d6b;
-  margin-top: 10px;
-
-
-}
+  box-sizing: content-box;
+  margin-top: 18px;
+  
+   }
 
 .logo_text p:first-child{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 19px;
   color: #fcb648;
-  text-transform: none;
   margin-bottom: 0px;
-  padding-top: 20px;
+  
+  
 }
 
 nav {
@@ -107,4 +116,24 @@ div.banner .container{
   padding-bottom: 17px;
   padding-top: 16px;
  }
- 
+
+ .column{
+   padding-top: 25px;
+   padding-bottom: 30px;
+ }
+
+  .column p{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+  }
+  
+  .column a{
+    text-decoration: none;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 15px;
+    font-weight: 500;
+    font-style: italic;
+    color: #ffac00;
+    float: right;
+  }
