--- a/src/main.scss
+++ b/src/main.scss
@@ -137,3 +137,27 @@ div.banner .container{
     color: #ffac00;
     float: right;
   }
+  
+  .title_name{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 40px;
+    text-decoration: underline;
+    color: #fcba50;
+    text-align: center;
+    
+  }
+
+  .title_column p{
+    display: inline-block;
+    text-align: center;
+  }
+
+  .column_item{
+    text-align: center;
+    max-width: 30%;
+  }
+
+  .column_item img{
+    border: 10px solid #fcba50;
+    border-radius: 100%;
+  }
