--- a/src/main.scss
+++ b/src/main.scss
@@ -182,7 +182,7 @@ p.text_item{
   font-size: 15px;
 }
 
-div.wrapper_form{
+.section{
   overflow: hidden;
 }
 
@@ -249,5 +249,4 @@ footer p{
   margin:0;
 }
  
-
 
