--- a/src/main.scss
+++ b/src/main.scss
@@ -25,6 +25,7 @@ main.container{
   background-color: green;
   width: 30%;
   height: 200px;
+  margin: 34px;
 }
 
 .wrapper_tree-columns{
@@ -53,11 +54,10 @@ main.container{
   background-color: yellow;
   width: 33.3%;
   height: 200px;
-font-size: 1rem;
+  font-size: 1rem;
 }
 
 footer{
   background-color: grey;
-  width: 100%;
   height: 100px;
 }
