includes team cards

--- a/src/main.scss
+++ b/src/main.scss
@@ -1,4 +1,5 @@
 @import "./partials/article/article.scss";
+@import "./partials/team_card/team_card.scss";
 
 //body * {
  // outline: 1px solid lightgrey;
@@ -124,47 +125,11 @@ div.banner p:last-child{
   padding-top: 16px;
 }
 
-
-
-div.column_item{
-  text-align: center;
-  max-width: 30%;
-  padding: 8px;
-}
-
 p.title_name{
   text-align: center;
   font-size: 40px;
   text-decoration: underline;
   color: #fcba50;
-}
-
-p.pers_name{
-  display: inline-block;
-  font-size: 22px;
-  color: #6e6d6b;
-}
-
-p.pers_position{
-  display: inline-block;
-  font-size: 22px;
-  color:#fcba50;
-}
-
-  
-div.column_item img{
-  box-sizing: border-box;
-  border: 9px solid #fcba50;
-  border-radius: 100%;
-  background-color: #fcba50;
-  max-width: 100%;
-  height: auto;
-}
-  
-p.text_item{
-  text-align: left;
-  padding-left: 30px;
-  font-size: 15px;
 }
 
 .section{
