--- a/src/main.scss
+++ b/src/main.scss
@@ -1,3 +1,75 @@
 body * {
   outline: 1px solid lightgrey;
 }
+
+body{
+  position: relative;
+  min-height: 100vh;
+  margin: 0px;
+}
+
+.header, .footer {
+  background-color: blue;
+  height: 100px;
+}
+
+.main{
+  position: relative;
+  height: 20px;
+  padding-bottom: 100px;
+}
+
+.footer{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
+
+
+
+  .wrapper{
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba($color: #000000, $alpha: 0.4);
+  
+
+  }
+
+  .modal{
+    position: relative;
+    margin: 30vh auto;
+    width: 30%;
+    height: 30%;
+    border-radius: 20px;
+    background-color: white;
+    z-index: 10;
+    padding: 25px;
+  
+    text-align: center;
+
+  }
+
+  .modal::after{
+    content: "X";
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    vertical-align: middle;
+    justify-content: center;
+    text-align: center;
+    position: absolute;
+    top: -20px;
+    right: -20px;
+    //border: 1px solid;
+    border-radius: 50%;
+    background-color: white;
+    margin: 0 auto;
+    z-index: 1;
+    cursor: pointer;
+  }
