--- a/src/partials/team_card/_team_card.html
+++ b/src/partials/team_card/_team_card.html
@@ -1,5 +1,5 @@
 <div class="team_card">
-    <div class="title_column">
+    <div class="team_title">
       <span class="pers_name">@@NameText</span>
       <span class="pers_position">- @@PositionText</span>
     </div>
