--- a/src/main.scss
+++ b/src/main.scss
@@ -1,3 +1,6 @@
+@import "./partials/main-content__item/main-content__item.scss";
+@import "./partials/news-media__item/news-media__item.scss";
+
 body * {
   outline: 1px solid lightgrey;
 }
@@ -12,11 +15,16 @@ body{
 }
 
 main{
-  max-width: 640px;
+ max-width: 640px;
+}
+
+article{
+  justify-content: space-between;
+
 }
 
 aside{
-  max-width: 300px;
+ max-width: 300px;
 }
 
 footer{
@@ -43,8 +51,9 @@ footer{
    cursor: pointer;
    color: #333333;
    padding: 8px 20px 8px 13px;
-   font-family: sans-serif;
+   font-family: 'PT Sans', sans-serif;
    font-size: 1.125em;
+   font-stretch: condensed ;
  }
  & li:hover{
    background-color: #333333;
@@ -55,38 +64,124 @@ footer{
 .carousel{
  
   border-bottom: 5px solid #c70000;
+  
 
  &-image{
    width: 380px;
    height: 250px;
    background: url("./img/jurgen.png");
    background-size: cover;
+   flex-shrink: 0;
  }
 
  &-text{
+   padding: 0 20px;
    background-color: #f7f9fa;
    max-width: 340px;
     &__title{
-     font-family: sans-serif;
-     font-size: 1.875em;
+     font-family: 'PT Sans', sans-serif;
+     font-size: 1.875rem;
      color: #c80000;
+     margin: 15px 0;
+    }
+    &__descr{
+      font-family: 'PT Sans', sans-serif;
+      font-size: 0.875rem;
+      color: #333333;
     }
  }
 } 
 
-
-
-.news-main-content__item{
- &-img{
-
- }
- &-descr{
-
- }
+.news-title{
+  position: relative;
+  border-bottom: 2px solid black;
+  margin: 45px 0 10px 0;
+  &__text{
+    position: absolute;
+    background-color: white;
+    font-family: 'PT Sans', sans-serif;
+    font-size: 1.5em;
+    margin: 0;
+    padding: 0 12px;
+    top: -20px;
+  }
 }
+
+.news-main-content{
+  justify-content: space-between;
+}
+
 .news-feed{
- 
+  width: 380px;
 }
-.news-media{
- 
+
+.news-title.border-color-red{
+  border-color: #c80000;
+}
+
+.news-title__text.text-color-blue{
+  color: #3d76cc;
+}
+
+.news-feed_content{
+  padding-left: 15px;
+     
+}
+
+.news-feed_content li{
+  font-family: 'PT Sans', sans-serif;
+  font-size: 0.875rem;
+  text-decoration: none;
+  
+  margin:8px 0;
+}
+
+.news-feed_content li a{
+  color: #333333;
+  text-decoration: none;
+}
+
+.news-feed_content li a:hover{
+  text-decoration: underline;
+  color:#3d76cc;
+}
+
+.news-with-pic{
+  flex-shrink: 0;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.news-with-pic a{
+  color: #333333;
+  margin: auto 8px;
+  font-family: 'PT Sans', sans-serif;
+  font-size: 0.875rem;
+  text-decoration: none;
+}
+
+.news-with-pic a:hover{
+  text-decoration: underline;
+  color:#3d76cc;
+}
+
+.news-with-pic img{
+  width: 100px;
+  height: 55px;
+}
+
+.news-video_wrapper{
+  width: 300px;
+}
+
+.news-title__text.text-align-center{
+  padding: 0 5px;
+  left: calc(50% - 37.5px);
+}
+
+.news-title__text.text-color-purple{
+  color: #6a0099;
+  font-family: 'PT Sans', sans-serif;
+  font-size: 1.125rem;
+  font-weight: 700;
 }
