--- a/src/partials/main-content__item/_main-content__item.html
+++ b/src/partials/main-content__item/_main-content__item.html
@@ -1,6 +1,10 @@
-<div class="main-content__item">
-    <img src="@@Img_src" alt="@@Img_alt">
-    <p class="main-content__item-descr">
-      @@DescrText
-    </p>
+<div class="news @@newsWidth">
+  <a href="" class="@@flowDrirection">
+    <div>
+      <img src="@@Img_src" alt="@@Img_alt">
+    </div>
+    <div class="news__descr @@descrSize">
+      <p class="@@marginLeft @@fontWeight @@fontSize">@@DescrText</p>
+    </div>
+  </a>
 </div>
