--- a/src/partials/news-review__item/_news-review__item.html
+++ b/src/partials/news-review__item/_news-review__item.html
@@ -1,7 +1,11 @@
 <div class="news-review__item">
+  <a href="">
     <p class="news-review__item-title">@@TitleText</p>
-    <img src="@@Img_src" alt="@@Img_alt">
+  </a>
+  <a href=""><img src="@@Img_src" alt="@@Img_alt"></a>
+  <a href="">
     <p class="news-review__item-descr text-color-blue">
       @@DescrText
     </p>
+  </a>
 </div>
