--- a/src/partials/main-content__item/main-content__item.scss
+++ b/src/partials/main-content__item/main-content__item.scss
@@ -1,10 +1,8 @@
 .news{
     
     max-width: 140px;
-    & img{
-        width: 100%;
-        
-    }
+    padding: 0 8px;
+
     &__descr{
         font-family: 'PT Sans', sans-serif;
         font-size: 1em;
